* string.c (tr_setup_table): fix multiple non latin argument for   non latin (over 256 characters) tr-like methods.   [ruby-core:43371] [Bug #6167]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35127 b2dd03c8-39d4-4d8f-98ff-823fe69b080e